# crypto_data

./: .gitignore  .pre-commit-config.yaml  README.md  order_book_socket.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
crypto_data/: log.py
crypto_data/binance/: candle.py  extract.py  extract_depth.py  schema.py  stream.py  transform.py
crypto_data/binance/np/: stream.py  transform.py
crypto_data/binance/pd/: extract.py  stream.py  transform.py
crypto_data/enum/: market.py
crypto_data/shared/: candle_db.py  transform.py  utils.py
demo/: example.py  numpy_example.py  pandas_example.py
src/: order.py  trading_bot.py  utils.py
src/broker/: notifier.py
src/broker/binance_/: broker.py  local_cache.py  schema.py  trade.py  transform.py
src/configs/: bbands_strategy.yaml  rsi_strategy.yaml  sma_strategy.yaml  trading_bot.yaml
src/crypto_data/binance/: extract.py  schema.py  stream.py  transform.py
src/crypto_data/shared/: candle_db.py  transform.py  utils.py
src/db/: candle_db.py
src/trading_bot/: trading_bot.py  utils.py
src/trading_bot/broker/binance_/: broker.py  schema.py  transform.py
tests/: __init__.py  binance_test.py  run_trading_bot_test.py  stream_candle_test.py
tests/configs/: trading_bot.yaml
