[metadata]
name = TradingBot
description = Python binance trading bot library.
author = Ricky
author_email = p.ricky.dev@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.0
url = https://github.com/Ricky294/TradingBot
install_requires =
    numpy>=1.19.0
    pandas>=1.3.0
    python-binance>=1.0.15
    ta-lib>=0.4.20
    tqdm>=4.62.0
    websocket-client>=1.2.0


[options]
packages =
    trading_bot

package_dir =
    =src
test_suite = tests
include_package_data = True
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
decorators = py.typed
